Bug 1665318 - reduce the overhead of collecting memory information for about:processes, r=dthayer.

Differential Revision: https://phabricator.services.mozilla.com/D125729