dom/chrome-webidl/ChromeUtils.webidl
@@ -672,15 +672,11 @@ dictionary ChildProcInfoDictionary {
   // Process filename (without the path name).
   DOMString filename = "";
 
-  // RSS, in bytes, i.e. the total amount of memory allocated
-  // by this process.
-  long long residentSetSize = 0;
-
-  // Resident unique size, i.e. the total amount of memory
-  // allocated by this process *and not shared with other processes*.
-  // Given that we share lots of memory between processes,
-  // this is probably the best end-user measure for "memory used".
-  long long residentUniqueSize = 0;
+  // The best end-user measure for "memory used" that we can obtain without
+  // triggering expensive computations. The value is in bytes.
+  // On Mac and Linux this matches the values shown by the system monitors.
+  // On Windows this will return the Commit Size.
+  unsigned long long memory = 0;
 
   // Time spent by the process in user mode, in ns.
   unsigned long long cpuUser = 0;
@@ -719,15 +715,11 @@ dictionary ParentProcInfoDictionary {
   // Process filename (without the path name).
   DOMString filename = "";
 
-  // RSS, in bytes, i.e. the total amount of memory allocated
-  // by this process.
-  long long residentSetSize = 0;
-
-  // Resident unique size, i.e. the total amount of memory
-  // allocated by this process *and not shared with other processes*.
-  // Given that we share lots of memory between processes,
-  // this is probably the best end-user measure for "memory used".
-  long long residentUniqueSize = 0;
+  // The best end-user measure for "memory used" that we can obtain without
+  // triggering expensive computations. The value is in bytes.
+  // On Mac and Linux this matches the values shown by the system monitors.
+  // On Windows this will return the Commit Size.
+  unsigned long long memory = 0;
 
   // Time spent by the process in user mode, in ns.
   unsigned long long cpuUser = 0;
